--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cryptor</title>
+    <title>Task Runner Service</title>
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.png" type="imagex-icon">
     <style>
